# hayate

./: .gitignore  CHANGELOG.md  CLAUDE.md  DESIGN.md  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  release-accel.yml  release.yml  wpt-refresh.yml
accel/: Cargo.toml  pyproject.toml
accel/src/: lib.rs
benchmarks/: bench.py
docs/: api.md  benchmarks.md  conformance.md  index.md  llms.txt  playground.md
docs/guide/: context.md  getting-started.md  middleware.md  realtime.md  routing.md  runtimes.md  testing.md  validation.md
docs/research/: cloudflare.md
examples/: chat.py
examples/workers/: entry.py  pyproject.toml  wrangler.toml
scripts/: check_workerd.sh
src/hayate/: __init__.py  abort.py  app.py  body.py  context.py  cookies.py  exceptions.py  formdata.py  headers.py  jsonutil.py  request.py  response.py  router.py  sse.py  url.py  urlpattern.py  validator.py  websocket.py
src/hayate/adapters/: __init__.py  asgi.py  aws.py  workers.py
src/hayate/middleware/: __init__.py  _internal.py  basic_auth.py  body_limit.py  cache.py  compress.py  cors.py  etag.py  logger.py  rate_limit.py  secure_headers.py  static_files.py  timeout.py
tests/: _ws.py  conftest.py  test_accel.py  test_app.py  test_asgi.py  test_chat_example.py  test_cookies.py  test_headers.py  test_jsonutil.py  test_lambda_adapter.py  test_middleware.py  test_middleware_http.py  test_properties.py  test_rate_limit.py  test_request.py  test_response.py  test_router.py  test_routes_introspection.py  test_sse.py  test_static_and_cache.py  test_todo_api.py  test_url.py  test_urlpattern.py  test_validator.py  test_websocket.py  test_workers_adapter.py  test_wpt_url.py  test_wpt_urlpattern.py
tests/wpt/: README.md
typing_tests/: strict.py
