[build-system]
requires = ["uv_build>=0.11,<0.12"]
build-backend = "uv_build"

[project]
name = "hayate"
version = "0.5.0"
description = "Web-standards-first Python web framework: Fetch API semantics, zero dependencies, runtime-agnostic core"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Yusuke Hayashi" }]
keywords = ["web", "framework", "asgi", "fetch", "urlpattern", "web-standards", "hono"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Internet :: WWW/HTTP",
  "Typing :: Typed",
]
dependencies = []

[project.urls]
Repository = "https://github.com/hayatepy/hayate"
Changelog = "https://github.com/hayatepy/hayate/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.25",
  "ruff>=0.9",
  "msgspec>=0.18",
]
bench = [
  "starlette>=0.40",
]
docs = [
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.27",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
