[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "hayate-accel"
version = "0.2.0"
description = "Optional native accelerator for the hayate web framework (Tier 2)"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Yusuke Hayashi" }]

[tool.maturin]
module-name = "hayate_accel"
